plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

application {
    mainClass = 'application.Main'
    applicationDefaultJvmArgs = ['--enable-preview']
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
}

// Add a task to run the test producer
task runProducer(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'application.TestProducer'
    jvmArgs = ['--enable-preview']
}

repositories {
    mavenCentral()
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes "Main-Class": "application.Main"
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    
    // Json
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.3'

    // Kafka
    implementation 'org.apache.kafka:kafka-clients:3.6.0'

    // Database
    implementation 'org.postgresql:postgresql:42.7.7'
    
    // JPA annotations
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'jakarta.transaction:jakarta.transaction-api:2.0.1'
}